printers: Fix compilation error

Fix "format not a string literal" error by not using
formatted print.

https://bugzilla.gnome.org/show_bug.cgi?id=764153